rubric requirements
