# swagger.json
@@ -268,7 +268,35 @@
         ],
         "responses": {
           "200": {
-            "description": "Contact deleted successfully"
+            "description": "The contact has been successfully deleted. Below is an example of the information that has been removed.",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "firstName": {
+                  "type": "string",
+                  "example": "name"
+                },
+                "lastName": {
+                  "type": "string",
+                  "example": "last_name"
+                },
+                "email": {
+                  "type": "string",
+                  "example": "email@example.com"
+                },
+                "favoriteColor": {
+                  "type": "string",
+                  "example": "blue"
+                },
+                "birthday": {
+                  "type": "string",
+                  "example": "2000-10-09"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
           },
           "500": {
             "description": "Internal Server Error"
